Add username column to user and display user if sign up

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,8 +7,12 @@
             <p class="card-text"><%= truncate(post.body, length: 100) %></p>
           </div>
           <div class="card-footer text-muted">
+            <% if user_signed_in? %>
+              <div><%= post.user.email %></div>
+            <% end %>
             <small> Created <%= time_ago_in_words(post.created_at) %> ago,
-            edited <%= time_ago_in_words(post.updated_at) %> ago </small>
+              edited <%= time_ago_in_words(post.updated_at) %> ago </small>
+            
           </div>
         </div>
       </div>
