--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Welcome to the Club House app</h1>
+<div class="container">
+    <div class="row justify-content-center">
+        <h1>Welcome to the Club House app</h1>
+        
+    </div>
+</div>
