--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
           </div>
           <div class="card-footer text-muted">
             <% if user_signed_in? %>
-              <div><%= post.user.email %></div>
+              <div><%= post.user.username %></div>
             <% end %>
             <small> Created <%= time_ago_in_words(post.created_at) %> ago,
               edited <%= time_ago_in_words(post.updated_at) %> ago </small>
